[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Charater scenes/Laura/Laura.gd" type="Script" id=1]
[ext_resource path="res://workspaces/Dev_BA/janitor.glb" type="PackedScene" id=2]
[ext_resource path="res://Control_1.gd" type="Script" id=3]
[ext_resource path="res://Image file/drive-download-20240125T224344Z-001/textdesign-04.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/battlenet/new_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Image file/drive-download-20240125T224344Z-001/textdesign-05.png" type="Texture" id=6]
[ext_resource path="res://Image file/Characters/zackh_002.png" type="Texture" id=7]
[ext_resource path="res://characters/Zach/Timer.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[node name="Zach" type="Area"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="janitor" parent="." instance=ExtResource( 2 )]

[node name="StaticBody" type="StaticBody" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 3.75, 0, 0, 0, 0.9, 0, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1.05, 0, 0, 0, 3.78, 0, 0, 0, 0.85, 0, 0, 0 )
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1.05, 0, 0, 0, 3.78, 0, 0, 0, 0.85, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.2, 0, 0, 0, 1.75, 0, 0, 0, 0.2, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 18.5036, 0, 0, 0, 2.50048, 0, 0, 0, 18.5036, 0, 0, 0 )
shape = SubResource( 2 )
__meta__ = {
"_editor_description_": "														"
}

[node name="Zach" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -822, 1045 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Zach"]
margin_left = 60.0
margin_top = 440.0
margin_right = 100.0
margin_bottom = 480.0
custom_styles/panel = SubResource( 3 )

[node name="BackBoard" type="Panel" parent="Zach/Panel"]
margin_left = -60.0
margin_top = -440.0
margin_right = 964.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="NinePatchRect" type="NinePatchRect" parent="Zach/Panel"]
margin_left = 570.0
margin_top = -344.0
margin_right = 910.0
margin_bottom = -1.00003
rect_scale = Vector2( 1.16993, 2.2377 )
texture = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Backtext" type="NinePatchRect" parent="Zach/Panel"]
margin_right = 904.0
margin_bottom = 120.0
texture = ExtResource( 6 )
region_rect = Rect2( 37.764, 71.282, 941.108, 205.582 )

[node name="NinePatchRect2" type="NinePatchRect" parent="Zach/Panel"]
margin_top = -70.0
margin_right = 410.0
margin_bottom = -20.0
texture = ExtResource( 4 )
region_rect = Rect2( 67.45, 15.688, 293, 55 )

[node name="Label" type="Label" parent="Zach/Panel/NinePatchRect2"]
margin_left = 190.0
margin_top = 11.0
margin_right = 234.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.721569, 0.886275, 0.823529, 1 )
custom_fonts/font = ExtResource( 5 )
autowrap = true
clip_text = true

[node name="Label" type="Label" parent="Zach/Panel"]
margin_left = 129.0
margin_top = 19.0
margin_right = 747.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.701961, 0.878431, 0.811765, 1 )
custom_fonts/font = ExtResource( 5 )
autowrap = true
clip_text = true

[node name="Timer" type="Timer" parent="."]
script = ExtResource( 8 )

[connection signal="body_entered" from="Area" to="Zach" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Zach" method="_on_Area_body_exited"]
