[gd_scene load_steps=10 format=2]

[ext_resource path="res://Control_1.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/battlenet/new_dynamicfont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.490196 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.803922, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.00784314, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.968627, 0, 1, 1 )

[node name="playerinterface" type="CanvasLayer"]

[node name="Control_1A" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -822, 1045 )
script = ExtResource( 1 )

[node name="BackBoard" type="Panel" parent="Control_1A"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Backtext" type="Panel" parent="Control_1A"]
margin_left = 60.0
margin_top = 440.0
margin_right = 964.0
margin_bottom = 560.0
custom_styles/panel = SubResource( 2 )

[node name="Panel" type="Panel" parent="Control_1A/Backtext"]
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="Control_1A/Backtext/Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 884.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var1"
autowrap = true
clip_text = true

[node name="Panel2" type="Panel" parent="Control_1A/Backtext"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control_1A/Backtext/Panel2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 884.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var2"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="Panel3" type="Panel" parent="Control_1A/Backtext"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control_1A/Backtext/Panel3"]
margin_left = 20.0
margin_top = 20.0
margin_right = 884.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var3"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="Panel4" type="Panel" parent="Control_1A/Backtext"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control_1A/Backtext/Panel4"]
margin_left = 20.0
margin_top = 20.0
margin_right = 884.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var4"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="Panel5" type="Panel" parent="Control_1A/Backtext"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control_1A/Backtext/Panel5"]
margin_left = 20.0
margin_top = 20.0
margin_right = 884.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var,var5"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}
